# sams2

./: AUTHORS  CHANGELOG  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  VERSION  config.h  configure  configure.in  daemon.c  demon.c  logtool.c  redirect.c  sams_sprintf.h  samsdaemon.c  tools.c  tools.h  upgrade_mysql_db.sh
1.0.x/: demon.c
branches/2.0.x/: INSTALL  Makefile.am  Makefile.cvs  Makefile.in  NEWS  README  TODO  aclocal.m4  configure.in  upgrade_mysql_db.sh
branches/2.0.x-surae/src/: Makefile.am  dbcleaner.cpp  dbconn.cpp  dbconn.h  dbexporter.h  delaypoollist.cpp  delaypoollist.h  grouplist.cpp  mysqlquery.cpp  net.cpp  odbcconn.cpp  pgquery.h  pluginlist.cpp  pluginlist.h  proxy.cpp  proxy.h  samsconfig.cpp  samsldap.cpp  samsuser.cpp  samsuser.h  samsusers.cpp  squidconf.cpp  squidlogline.cpp  tools.cpp  tools.h  url.cpp  urlgroup.h  userfilter.cpp  userlist.h
branches/2.0.x/debian/: README.Debian  TODO.Debian  changelog  confiles  control  copyright  docs  init.d  install  postinst.ex  preinst.ex  rules  sams.dirs  sams.install  sams.postinst  sams.postrm  watch
branches/2.0.x/doc/: commands.html  index.html  install.html  requirements.html  setup.html  tables.html
branches/2.0.x/etc/: sams2.conf
branches/2.0.x/m4/: acinclude.m4  mysql.m4  pq.m4  unixodbc.m4
branches/2.0.x/php/: config.php  createdb.php  dbclass.php  index.html  lframe.php  lframe_1webconf.php  lframe_users.php  main.php  proxyclass.php  samsclass.php  shablonclass.php  tools.php  tray.php  userclass.php
branches/2.0.x/redhat/: init.d  sysconfig
branches/2.0.x/scripts/: sams_send_email
branches/2.0.x/spec/: sams.spec
branches/2.0.x/src/: Makefile.am  config.h.in  datefilter.cpp  datefilter.h  dbcleaner.cpp  dbcleaner.h  dbconn.cpp  dbconn.h  dbexporter.cpp  dbquery.cpp  debug.h  dns.cpp  filter.cpp  global.cpp  global.h  groups.cpp  localnetworks.cpp  localnetworks.h  logger.cpp  mysqlconn.cpp  mysqlconn.h  mysqlquery.cpp  mysqlquery.h  net.cpp  net.h  odbcconn.cpp  odbcquery.cpp  odbcquery.h  pgconn.cpp  pgquery.cpp  pluginlist.cpp  processmanager.cpp  processmanager.h  proxy.cpp  proxy.h  samsconfig.cpp  samsconfig.h  samsdaemon.cpp  samsparser.cpp  samsredir.cpp  (+22 more)
doc/: Makefile.am  accesslists.html  authorization.html  commands.html  configure.html  delaypools.html  faq.html  importfromsams1.html  index.html  install.html  license.html  overview.html  requirements.html  sams2.css  sams2_conf.html  samsbackup.html  setup.html  someproxy.html  squid.html  synchronization.html  syncwithad.html  syncwithntlm.html  tables.html  templates.html  webinterface.html
doc/EN/: install.html  upgrade.html
doc/RU/: adldap.html  apache.html  faq.html  filerecovery.html  index.html  install.html  localhost.html  mysql_install.html  osandsoft.html  redirector.html  samba3.html  several.html  shablons.html
doc/guide/InstallGuide.ru.files/: props0009.xml
doc/internal/: dbdesc.doc
experimental/: INSTALL  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  config.h  configure  configure.in  find_ext_includes  format_src
experimental/doc/src/: samsnewgen
experimental/src/: Makefile.am  Makefile.in  dbmysql.cpp  dbmysql.h  debug.cpp  debug.h  defines.h  logparser.cpp  logparser.h  samsconfig.cpp  samsconfig.h  samsdb.cpp  samsdb.h  samsfile.cpp  samsfile.h  samshosts.cpp  samshosts.h  samsparser.cpp  samsuser.cpp  samsuser.h  tools.cpp  tools.h
php/: Makefile.am  admin.php  authclass.php  blocked.php  config.php  createdb.php  createpdf.php  dateclass.php  dbclass.php  dbstruct.sql  index.html  install.php  lframe.php  lframe_0ident.php  lframe_1webconf.php  lframe_sams.php  lframe_users.php  main.php  mysqltools.php  pluginmanager.php  poolclass.php  proxyclass.php  reportsclass.php  rgb.php  sams2.conf  samsclass.php  samstools.php  setup.php  shablonclass.php  test_table.html  tools.php  trangeclass.php  tray.php  userclass.php
php/icon/classic/: setup.css  tree.css  treeview.css
php/lang/: koi8r-2-utf8  koi8r-2-win1251  lang.EN  lang.KOI8-R  lang.UTF8  lang.WIN1251  utf8-2-koi8-r
php/lib/: chart.php  piegraph.class.php
php/lib/font/: Nimbus.z
php/menu/: ftiens4.js.work  script.js  ua.js
php/messages/: blocked.php
php/messages/EN/: blocked.php
php/messages/KOI8-R/: blocked.php
php/messages/UTF8/: blocked.php
php/messages/WIN1251/: blocked.php
php/plugins/configtray/: configtraydescr.php
php/plugins/squid/: squiddescr.php
php/src/: _usersbuttom_1_ldap.php  addurllist.php  adldap.php  adminbuttom_2_chuser.php  adminbuttom_3_addadm.php  adminbuttom_4_chpasswd.php  adminbuttom_9_logoff.php  admintray.php  allowbuttom_1_loadlist.php  allowbuttom_2_savelist.php  allowlisttray.php  auth.php  authadldbuttom_1_prop.php  authadldbuttom_2_usersadd.php  authadldbuttom_3_importfromad.php  authadldtray.php  authldapbuttom_1_prop.php  authldapbuttom_2_usersadd.php  authldapbuttom_3_importfromldap.php  authldaptray.php  authncsabuttom_1_usersimport.php  authncsabuttom_2_ncsaimport.php  authntlmbuttom_1_prop.php  authntlmbuttom_2_usersadd.php  authntlmbuttom_3_importfromntlm.php  authntlmtray.php  authtray.php  backupbuttom_1_savebase.php  backupbuttom_2_loadbase.php  backuptray.php  configbuttom_1_prop.php  configbuttom_3_import.php  configbuttom_3_importcache.php  configbuttom_4_backup.php  configbuttom_5_restore.php  configbuttom_6_moveusertrafficdata.php  configtray.php  contextbuttom_1_loadlist.php  contextbuttom_2_savelist.php  contextbuttom_3_deletelist.php  (+109 more)
src/: Makefile.am  Makefile.in  config.h.in  datefilter.h  dbcleaner.cpp  dbcleaner.h  dbconn.cpp  dbconn.h  dbexporter.cpp  dbquery.cpp  dbquery.h  debug.cpp  debug.h  dns.cpp  dns.h  filter.cpp  grouplist.h  groups.cpp  groups.h  ip.cpp  ip.h  localnetworks.cpp  localnetworks.h  logger.cpp  logger.h  mysqlconn.cpp  mysqlquery.cpp  mysqlquery.h  net.cpp  net.h  odbcconn.cpp  odbcconn.h  odbcquery.cpp  odbcquery.h  pgconn.cpp  pgconn.h  pgquery.cpp  pgquery.h  pluginlist.cpp  processmanager.cpp  (+42 more)
tags/1.0.0/: Makefile.am  README.RUS
tags/2.0.0-b2/: Makefile.am  TODO  configure.in
(+1222 files in other folders)
